added header and footer

--- a/app/page.html
+++ b/app/page.html
@@ -14,7 +14,7 @@
 <body>
 
   <header class="header">
-    <div class="container-fluid container-pink">
+    <div class="container-fluid">
       <div class="container">
         <div class="header__inner">
           <a class="header__logo" href="#">
@@ -65,34 +65,9 @@
 
   <main class="main">
 
-    <section class="hero">
-      <div class="container-fluid container-pink">
-        <div class="container">
-          <div class="hero__inner">
-            <div class="hero__box">
-              <a class="hero__video-link" href="#">
-                <img src="" alt="">
-                Play showreel
-              </a>
-              <h1 class="hero__title">
-                Enjoy studying
-                with Createx Online Courses
-              </h1>
-              <a class="hero__btn btn btn-white" href="#">About us</a>
-              <a class="hero__btn btn" href="#">Explore courses</a>
-            </div>
-            <img class="hero__image" src="image/hero-image.png" alt="hero image">
-          </div>
-          <div class="hero__info">
-            <div class="hero__info-item">
-              
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
 
+  
   </main>
 
   <section class="subscribe">
@@ -124,8 +99,7 @@
         <div class="footer__inner">
           <div class="footer__info-box">
             <a class="footer__logo" href="#">
-              <img class="footer__logo-img" src="images/footer-logo.png" alt="footer logo"
-                style="width: 130px; height: 22px;">
+              <img class="footer__logo-img" src="images/footer-logo.png" alt="footer logo" style="width: 130px; height: 22px;">
             </a>
             <p class="footer__text">
               Createx Online School is a leader in online studying. We have lots of courses and programs from the main
@@ -167,7 +141,7 @@
                 </a>
               </li>
               <li>
-                <a class="telegram-icon" href="#">
+                <a class="telegram-icon" href="#">                
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-telegram" width="22"
                     height="20" viewBox="0 0 24 24" stroke-width="1" stroke="none" fill="#fff" stroke-linecap="round"
                     stroke-linejoin="round">
