added hero section

--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,9 @@
           <div class="hero__inner">
             <div class="hero__box">
               <a class="hero__video-link" href="#">
-                <img src="" alt="">
+                <div class="hero__video-box">
+                  <img class="hero__video-img" src="images/play-small.png" alt="play button" style="width: 52px; height: 52px;">
+                </div>              
                 Play showreel
               </a>
               <h1 class="hero__title">
@@ -81,12 +83,43 @@
               <a class="hero__btn btn btn-white" href="#">About us</a>
               <a class="hero__btn btn" href="#">Explore courses</a>
             </div>
-            <img class="hero__image" src="image/hero-image.png" alt="hero image">
+            <img class="hero__image" src="images/hero-image.png" alt="hero image" style="width: 551px; height: 602px;">
           </div>
           <div class="hero__info">
-            <div class="hero__info-item">
-              
-            </div>
+            <ul class="hero__info-list">
+              <li>
+                <p class="hero__list-number">
+                  1200
+                </p>
+                <p class="hero__list-text">
+                  Students graduated
+                </p>
+              </li>
+              <li>
+                <p class="hero__list-number">
+                  84
+                </p>
+                <p class="hero__list-text">
+                  Completed courses
+                </p>
+              </li>
+              <li>
+                <p class="hero__list-number">
+                  16
+                </p>
+                <p class="hero__list-text">
+                  Qualified tutors
+                </p>
+              </li>
+              <li>
+                <p class="hero__list-number">
+                  5
+                </p>
+                <p class="hero__list-text">
+                  Years of experience
+                </p>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
