added section abut

--- a/app/index.html
+++ b/app/index.html
@@ -72,16 +72,20 @@
             <div class="hero__box">
               <a class="hero__video-link" href="#">
                 <div class="hero__video-box">
-                  <img class="hero__video-img" src="images/play-small.png" alt="play button" style="width: 52px; height: 52px;">
-                </div>              
+                  <img class="hero__video-img" src="images/play-small.png" alt="play button"
+                    style="width: 52px; height: 52px;">
+                </div>
                 Play showreel
               </a>
               <h1 class="hero__title">
                 Enjoy studying
                 with Createx Online Courses
               </h1>
-              <a class="hero__btn btn btn-white" href="#">About us</a>
-              <a class="hero__btn btn" href="#">Explore courses</a>
+              <div class="hero__btn-box">
+                <a class="hero__btn btn btn-white" href="#">About us</a>
+                <a class="hero__btn btn" href="#">Explore courses</a>
+              </div>
+
             </div>
             <img class="hero__image" src="images/hero-image.png" alt="hero image" style="width: 551px; height: 602px;">
           </div>
@@ -120,6 +124,54 @@
                 </p>
               </li>
             </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="about">
+      <div class="container-fluid about-container">
+        <div class="container">
+          <div class="about__inner">
+            <img class="about__image" src="images/content/about-image.png" alt="about image"
+              style="width: 705px; height: 560px;">
+            <div class="about__info-box">
+              <h6 class="about__suptitle">Who we are</h6>
+              <h2 class="about__title">Why Createx?</h2>
+              <ul class="about__list">
+                <li>
+                  <p class="about__list-text">
+                    A fermentum in morbi pretium aliquam adipiscing donec tempus.
+                  </p>
+                </li>
+                <li>
+                  <p class="about__list-text">
+                    Vulputate placerat amet pulvinar lorem nisl.
+                  </p>
+                </li>
+                <li>
+                  <p class="about__list-text">
+                    Consequat feugiat habitant gravida quisque elit bibendum id adipiscing sed.
+                  </p>
+                </li>
+                <li>
+                  <p class="about__list-text">
+                    Etiam duis lobortis in fames ultrices commodo nibh.
+                  </p>
+                </li>
+                <li>
+                  <p class="about__list-text">
+                    Tincidunt sagittis neque sem ac eget.
+                  </p>
+                </li>
+                <li>
+                  <p class="about__list-text">
+                    Ultricies amet justo et eget quisque purus vulputate dapibus tortor.
+                  </p>
+                </li>
+              </ul>
+              <a class="about__btn btn" href="#">More about us</a>
+            </div>
           </div>
         </div>
       </div>
