added section courses

--- a/app/index.html
+++ b/app/index.html
@@ -177,6 +177,98 @@
       </div>
     </section>
 
+    <section class="courses">
+      <div class="container">
+        <div class="courses__inner">
+          <div class="courses__head-box">
+            <div class="courses__title-box">
+              <h6 class="courses__suptitle">
+                Ready to learn?
+              </h6>
+              <h2 class="courses__title">
+                Featured Courses
+              </h2>
+            </div>
+            <a class="courses__btn btn btn-white" href="#">View all courses</a>
+          </div>
+          <ul class="courses__list">
+            <li class="courses__item">            
+                <img class="courses__item-img" src="images/content/courses-1.png" alt="cours one"
+                  style="width: 214px; height: 214px;">
+                <div class="courses__item-box">
+                  <a class="courses__item-spec courses__item-spec--green" href="#">Marketing</a>
+                  <a class="courses__item-course" href="#">The Ultimate Google Ads Training Course</a>
+                  <div class="courses__item-info">
+                    <p class="courses__price">$100</p>
+                    <a class="courses__author" href="#">| by Jerome Bell</a>
+                  </div>
+                </div>         
+            </li>
+            <li class="courses__item">            
+                <img class="courses__item-img" src="images/content/courses-2.png" alt="cours one"
+                  style="width: 214px; height: 214px;">
+                <div class="courses__item-box">
+                  <a class="courses__item-spec courses__item-spec--blue" href="#">Management</a>
+                  <a class="courses__item-course" href="#">Product Management Fundamentals</a>
+                  <div class="courses__item-info">
+                    <p class="courses__price">$480</p>
+                    <a class="courses__author" href="#">| by Marvin McKinney</a>
+                  </div>
+                </div>         
+            </li>
+            <li class="courses__item">            
+                <img class="courses__item-img" src="images/content/courses-3.png" alt="cours one"
+                  style="width: 214px; height: 214px;">
+                <div class="courses__item-box">
+                  <a class="courses__item-spec courses__item-spec--orange" href="#">HR & Recruting</a>
+                  <a class="courses__item-course" href="#">HR  Management and Analytics</a>
+                  <div class="courses__item-info">
+                    <p class="courses__price">$200</p>
+                    <a class="courses__author" href="#">| by Leslie Alexander Li</a>
+                  </div>
+                </div>         
+            </li>
+            <li class="courses__item">            
+                <img class="courses__item-img" src="images/content/courses-4.png" alt="cours one"
+                  style="width: 214px; height: 214px;">
+                <div class="courses__item-box">
+                  <a class="courses__item-spec courses__item-spec--green" href="#">Marketing</a>
+                  <a class="courses__item-course" href="#">Brand Management & PR Communications</a>
+                  <div class="courses__item-info">
+                    <p class="courses__price">$530</p>
+                    <a class="courses__author" href="#">| by Kristin Watson</a>
+                  </div>
+                </div>         
+            </li>
+            <li class="courses__item">            
+                <img class="courses__item-img" src="images/content/courses-5.png" alt="cours one"
+                  style="width: 214px; height: 214px;">
+                <div class="courses__item-box">
+                  <a class="courses__item-spec courses__item-spec--blue" href="#">Management</a>
+                  <a class="courses__item-course" href="#">Business Development Management</a>
+                  <div class="courses__item-info">
+                    <p class="courses__price">$400</p>
+                    <a class="courses__author" href="#">| by Dianne Russell</a>
+                  </div>
+                </div>         
+            </li>
+            <li class="courses__item">            
+                <img class="courses__item-img" src="images/content/courses-6.png" alt="cours one"
+                  style="width: 214px; height: 214px;">
+                <div class="courses__item-box">
+                  <a class="courses__item-spec courses__item-spec--rose" href="#">Design</a>
+                  <a class="courses__item-course" href="#">Graphic Design Basic</a>
+                  <div class="courses__item-info">
+                    <p class="courses__price">$500</p>
+                    <a class="courses__author" href="#">| by Guy Hawkins</a>
+                  </div>
+                </div>         
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
 
   </main>
 
