--- a/app/index.html
+++ b/app/index.html
@@ -192,83 +192,219 @@
             <a class="courses__btn btn btn-white" href="#">View all courses</a>
           </div>
           <ul class="courses__list">
-            <li class="courses__item">            
-                <img class="courses__item-img" src="images/content/courses-1.png" alt="cours one"
-                  style="width: 214px; height: 214px;">
-                <div class="courses__item-box">
-                  <a class="courses__item-spec courses__item-spec--green" href="#">Marketing</a>
-                  <a class="courses__item-course" href="#">The Ultimate Google Ads Training Course</a>
-                  <div class="courses__item-info">
-                    <p class="courses__price">$100</p>
-                    <a class="courses__author" href="#">| by Jerome Bell</a>
-                  </div>
-                </div>         
+            <li class="courses__item">
+              <img class="courses__item-img" src="images/content/courses-1.png" alt="cours one"
+                style="width: 214px; height: 214px;">
+              <div class="courses__item-box">
+                <a class="courses__item-spec courses__item-spec--green" href="#">Marketing</a>
+                <a class="courses__item-course" href="#">The Ultimate Google Ads Training Course</a>
+                <div class="courses__item-info">
+                  <p class="courses__price">$100</p>
+                  <a class="courses__author" href="#">| by Jerome Bell</a>
+                </div>
+              </div>
             </li>
-            <li class="courses__item">            
-                <img class="courses__item-img" src="images/content/courses-2.png" alt="cours one"
-                  style="width: 214px; height: 214px;">
-                <div class="courses__item-box">
-                  <a class="courses__item-spec courses__item-spec--blue" href="#">Management</a>
-                  <a class="courses__item-course" href="#">Product Management Fundamentals</a>
-                  <div class="courses__item-info">
-                    <p class="courses__price">$480</p>
-                    <a class="courses__author" href="#">| by Marvin McKinney</a>
-                  </div>
-                </div>         
+            <li class="courses__item">
+              <img class="courses__item-img" src="images/content/courses-2.png" alt="cours one"
+                style="width: 214px; height: 214px;">
+              <div class="courses__item-box">
+                <a class="courses__item-spec courses__item-spec--blue" href="#">Management</a>
+                <a class="courses__item-course" href="#">Product Management Fundamentals</a>
+                <div class="courses__item-info">
+                  <p class="courses__price">$480</p>
+                  <a class="courses__author" href="#">| by Marvin McKinney</a>
+                </div>
+              </div>
             </li>
-            <li class="courses__item">            
-                <img class="courses__item-img" src="images/content/courses-3.png" alt="cours one"
-                  style="width: 214px; height: 214px;">
-                <div class="courses__item-box">
-                  <a class="courses__item-spec courses__item-spec--orange" href="#">HR & Recruting</a>
-                  <a class="courses__item-course" href="#">HR  Management and Analytics</a>
-                  <div class="courses__item-info">
-                    <p class="courses__price">$200</p>
-                    <a class="courses__author" href="#">| by Leslie Alexander Li</a>
-                  </div>
-                </div>         
+            <li class="courses__item">
+              <img class="courses__item-img" src="images/content/courses-3.png" alt="cours one"
+                style="width: 214px; height: 214px;">
+              <div class="courses__item-box">
+                <a class="courses__item-spec courses__item-spec--orange" href="#">HR & Recruting</a>
+                <a class="courses__item-course" href="#">HR Management and Analytics</a>
+                <div class="courses__item-info">
+                  <p class="courses__price">$200</p>
+                  <a class="courses__author" href="#">| by Leslie Alexander Li</a>
+                </div>
+              </div>
             </li>
-            <li class="courses__item">            
-                <img class="courses__item-img" src="images/content/courses-4.png" alt="cours one"
-                  style="width: 214px; height: 214px;">
-                <div class="courses__item-box">
-                  <a class="courses__item-spec courses__item-spec--green" href="#">Marketing</a>
-                  <a class="courses__item-course" href="#">Brand Management & PR Communications</a>
-                  <div class="courses__item-info">
-                    <p class="courses__price">$530</p>
-                    <a class="courses__author" href="#">| by Kristin Watson</a>
-                  </div>
-                </div>         
+            <li class="courses__item">
+              <img class="courses__item-img" src="images/content/courses-4.png" alt="cours one"
+                style="width: 214px; height: 214px;">
+              <div class="courses__item-box">
+                <a class="courses__item-spec courses__item-spec--green" href="#">Marketing</a>
+                <a class="courses__item-course" href="#">Brand Management & PR Communications</a>
+                <div class="courses__item-info">
+                  <p class="courses__price">$530</p>
+                  <a class="courses__author" href="#">| by Kristin Watson</a>
+                </div>
+              </div>
             </li>
-            <li class="courses__item">            
-                <img class="courses__item-img" src="images/content/courses-5.png" alt="cours one"
-                  style="width: 214px; height: 214px;">
-                <div class="courses__item-box">
-                  <a class="courses__item-spec courses__item-spec--blue" href="#">Management</a>
-                  <a class="courses__item-course" href="#">Business Development Management</a>
-                  <div class="courses__item-info">
-                    <p class="courses__price">$400</p>
-                    <a class="courses__author" href="#">| by Dianne Russell</a>
-                  </div>
-                </div>         
+            <li class="courses__item">
+              <img class="courses__item-img" src="images/content/courses-5.png" alt="cours one"
+                style="width: 214px; height: 214px;">
+              <div class="courses__item-box">
+                <a class="courses__item-spec courses__item-spec--blue" href="#">Management</a>
+                <a class="courses__item-course" href="#">Business Development Management</a>
+                <div class="courses__item-info">
+                  <p class="courses__price">$400</p>
+                  <a class="courses__author" href="#">| by Dianne Russell</a>
+                </div>
+              </div>
             </li>
-            <li class="courses__item">            
-                <img class="courses__item-img" src="images/content/courses-6.png" alt="cours one"
-                  style="width: 214px; height: 214px;">
-                <div class="courses__item-box">
-                  <a class="courses__item-spec courses__item-spec--rose" href="#">Design</a>
-                  <a class="courses__item-course" href="#">Graphic Design Basic</a>
-                  <div class="courses__item-info">
-                    <p class="courses__price">$500</p>
-                    <a class="courses__author" href="#">| by Guy Hawkins</a>
-                  </div>
-                </div>         
+            <li class="courses__item">
+              <img class="courses__item-img" src="images/content/courses-6.png" alt="cours one"
+                style="width: 214px; height: 214px;">
+              <div class="courses__item-box">
+                <a class="courses__item-spec courses__item-spec--rose" href="#">Design</a>
+                <a class="courses__item-course" href="#">Graphic Design Basic</a>
+                <div class="courses__item-info">
+                  <p class="courses__price">$500</p>
+                  <a class="courses__author" href="#">| by Guy Hawkins</a>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
       </div>
     </section>
 
+    <section class="benefits">
+      <div class="container">
+        <div class="benefits__inner">
+          <div class="benefits__title-box">
+            <h6 class="benefits__suptitle">
+              Our benefits
+            </h6>
+            <h2 class="benefits__title">
+              That’s how we do it
+            </h2>
+          </div>
+          <div class="benefits__tabs">
+            <div class="benefits__tab">
+              <a class="benefits__tab-item benefits__tab-item--active" href="#tab1">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-star" width="16" height="16"
+                  viewBox="0 0 24 24" stroke-width="1.5" stroke="#9A9CA5" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path
+                    d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
+                </svg>
+                <span>Experienced Tutors</span> 
+              </a>
+              <a class="benefits__tab-item" href="#tab2">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9A9CA5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
+                </svg>
+                <span>Feedback & Support</span> 
+              </a>
+              <a class="benefits__tab-item" href="#tab3">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-stack-2" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9A9CA5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <polyline points="12 4 4 8 12 12 20 8 12 4" />
+                  <polyline points="4 12 12 16 20 12" />
+                  <polyline points="4 16 12 20 20 16" />
+                </svg>
+                <span>24/7 Online Library</span> 
+              </a>
+              <a class="benefits__tab-item" href="#tab4">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-messages" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9A9CA5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                  <path d="M21 14l-3 -3h-7a1 1 0 0 1 -1 -1v-6a1 1 0 0 1 1 -1h9a1 1 0 0 1 1 1v10" />
+                  <path d="M14 15v2a1 1 0 0 1 -1 1h-7l-3 3v-10a1 1 0 0 1 1 -1h2" />
+                </svg>
+                <span>Community</span>
+              </a>
+            </div>
+            <div class="benefits__tab-content">
+              <div class="benefits__content-item benefits__content-item--active" id="tab1">
+                <div class="benefits__content-info">
+                  <h4 class="benefits__content-title">
+                    Only practicing tutors
+                  </h4>
+                  <p class="benefits__content-text">
+                    Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse. Morbi mauris
+                    cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit diam mi amet massa. Fermentum
+                    diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus
+                    vehicula.
+                  </p>
+                </div>
+                <img class="benefits__image" src="images/content/benefits-image.png" alt="benefits image"
+                  style="width: 600px; height: 440px;">
+              </div>
+              <div class="benefits__content-item" id="tab2">
+                <div class="benefits__content-info">
+                  <h4 class="benefits__content-title">
+                    Super Support
+                  </h4>
+                  <p class="benefits__content-text">
+                    Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse. Morbi mauris
+                    cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit diam mi amet massa. Fermentum
+                    diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus
+                    vehicula.                    
+                    Nunc, sodales tortor sit diam mi amet massa. Fermentum
+                    diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus
+                    vehicula.
+                  </p>
+                </div>
+                <img class="benefits__image" src="images/content/benefits-image-2.png" alt="benefits image"
+                  style="width: 600px; height: 440px;">
+              </div>
+              <div class="benefits__content-item" id="tab3">
+                <div class="benefits__content-info">
+                  <h4 class="benefits__content-title">
+                    Library
+                  </h4>
+                  <p class="benefits__content-text">
+                    Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse. Morbi mauris
+                    cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit diam mi amet massa. Fermentum
+                    diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus
+                    vehicula.
+                  </p>
+                  <p class="benefits__content-text">
+                    Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse. Morbi mauris
+                    cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit diam mi amet massa. Fermentum
+                    diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus
+                    vehicula.
+                  </p>
+                  <p class="benefits__content-text">
+                    Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse. Morbi mauris
+                    cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit diam mi amet massa. Fermentum
+                    diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus
+                    vehicula.
+                  </p>
+                </div>
+                <img class="benefits__image" src="images/content/benefits-image-3.png" alt="benefits image"
+                  style="width: 600px; height: 440px;">
+              </div>
+              <div class="benefits__content-item" id="tab4">
+                <div class="benefits__content-info">
+                  <h4 class="benefits__content-title">
+                    Strong Community
+                  </h4>
+                  <p class="benefits__content-text">
+                    Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse. Morbi mauris
+                    cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit diam mi amet massa. Fermentum
+                    diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus
+                    vehicula.
+                  </p>
+                  <p class="benefits__content-text">
+                    Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse. Morbi mauris
+                    cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit diam mi amet massa. Fermentum
+                    diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus
+                    vehicula.
+                  </p>
+                </div>
+                <img class="benefits__image" src="images/content/benefits-image-4.png" alt="benefits image"
+                  style="width: 600px; height: 440px;">
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
 
