--- a/app/index.html
+++ b/app/index.html
@@ -290,27 +290,34 @@
                   <path
                     d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
                 </svg>
-                <span>Experienced Tutors</span> 
+                <span>Experienced Tutors</span>
               </a>
               <a class="benefits__tab-item" href="#tab2">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9A9CA5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                  <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="16"
+                  height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9A9CA5" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path
+                    d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
                 </svg>
-                <span>Feedback & Support</span> 
+                <span>Feedback & Support</span>
               </a>
               <a class="benefits__tab-item" href="#tab3">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-stack-2" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9A9CA5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-stack-2" width="16"
+                  height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9A9CA5" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                   <polyline points="12 4 4 8 12 12 20 8 12 4" />
                   <polyline points="4 12 12 16 20 12" />
                   <polyline points="4 16 12 20 20 16" />
                 </svg>
-                <span>24/7 Online Library</span> 
+                <span>24/7 Online Library</span>
               </a>
               <a class="benefits__tab-item" href="#tab4">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-messages" width="16" height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9A9CA5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-messages" width="16"
+                  height="16" viewBox="0 0 24 24" stroke-width="1.5" stroke="#9A9CA5" fill="none" stroke-linecap="round"
+                  stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                   <path d="M21 14l-3 -3h-7a1 1 0 0 1 -1 -1v-6a1 1 0 0 1 1 -1h9a1 1 0 0 1 1 1v10" />
                   <path d="M14 15v2a1 1 0 0 1 -1 1h-7l-3 3v-10a1 1 0 0 1 1 -1h2" />
                 </svg>
@@ -342,7 +349,7 @@
                     Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse. Morbi mauris
                     cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit diam mi amet massa. Fermentum
                     diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus
-                    vehicula.                    
+                    vehicula.
                     Nunc, sodales tortor sit diam mi amet massa. Fermentum
                     diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus
                     vehicula.
@@ -401,6 +408,83 @@
               </div>
             </div>
 
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="events">
+      <div class="container-fluid container-pink">
+        <div class="container">
+          <div class="events__inner">
+            <div class="events__title-box">
+              <h6 class="events__suptitle">
+                Our Events
+              </h6>
+              <h2 class="events__title">
+                Lectures & workshops
+              </h2>
+            </div>
+            <div class="events__content">
+              <div class="events__content-item">
+                <div class="events-item__day">05</div>
+                <div class="events-item__date">
+                  <p class="events-item__month">August</p>
+                  <p class="events-item__time">11:00 – 14:00</p>
+                </div>
+                <div class="events-item__info">
+                  <a class="events-item__link" href="#">
+                    Formation of the organizational structure of the company in the face of uncertainty.                                
+                  </a>
+                  <p class="events-item__descr">
+                    Onine master-class
+                  </p>
+                </div>
+                <div class="events-item__btn">
+                  <a class="events__btn btn btn-white" href="#">View more</a>
+                </div>                
+              </div>
+              <div class="events__content-item">
+                <div class="events-item__day">24</div>
+                <div class="events-item__date">
+                  <p class="events-item__month">July</p>
+                  <p class="events-item__time">11:00 – 12:30</p>
+                </div>
+                <div class="events-item__info">
+                  <a class="events-item__link" href="#">
+                    Building a customer service department. Best Practices.                             
+                  </a>
+                  <p class="events-item__descr">
+                    Onine lecture
+                  </p>
+                </div>
+                <div class="events-item__btn">
+                  <a class="events__btn btn btn-white" href="#">View more</a>
+                </div>                
+              </div>
+              <div class="events__content-item">
+                <div class="events-item__day">16</div>
+                <div class="events-item__date">
+                  <p class="events-item__month">August</p>
+                  <p class="events-item__time">10:00 – 13:00</p>
+                </div>
+                <div class="events-item__info">
+                  <a class="events-item__link" href="#">
+                    How to apply methods of speculative design in practice. Worldbuilding prototyping.                               
+                  </a>
+                  <p class="events-item__descr">
+                    Onine workshop
+                  </p>
+                </div>
+                <div class="events-item__btn">
+                  <a class="events__btn btn btn-white" href="#">View more</a>
+                </div>                
+              </div>
+            </div>
+            <div class="events__bottom">
+              <p class="events__bottom-text">Do you want more?</p>
+              <a class="events__bottom-btn btn " href="#">Explore all events</a>
+            </div>
           </div>
         </div>
       </div>
