added section team

--- a/app/page.html
+++ b/app/page.html
@@ -270,6 +270,7 @@
           </form>
         </div>
       </div>
+      <p class="footer__copy-text">© All rights reserved.Made with love by Createx Studio </p>
     </div>
   </footer>
 
