page courses finish

--- a/app/courses.html
+++ b/app/courses.html
@@ -237,6 +237,139 @@
       </div>
     </section>
 
+    <section class="testimonials">
+      <div class="container-fluid container-grey">
+        <div class="container">
+          <div class="testimonials__inner testimonials__courses-page">
+            <div class="testimonials__title-box">
+              <h6 class="testimonials__suptitle">
+                TESTIMONIALS
+              </h6>
+              <h2 class="testimonials__title">
+                What our students say
+              </h2>
+            </div>
+            <div class="testimonials__slider">
+
+              <div class="testimonials__content-box">
+                <p class="testimonials__content-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra mus lobortis
+                  fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus ornare turpis quis non.
+                  Congue tortor in euismod vulputate etiam eros. Pulvinar neque pharetra arcu diam maecenas diam integer
+                  in.
+                </p>
+                <img class="testimonials__content-decor" src="images/braces.png" alt="decor">
+                <div class="testimonials__author-box">
+                  <img class="testimonials__author-image" src="images/content/author-test-img.png" alt="auhtor image"
+                    style="width: 72px; height: 72px;">
+                  <div class="testimonials__author-name">Eleanor Pena</div>
+                  <div class="testimonials__author-position">Position, Course</div>
+                </div>
+              </div>
+
+              <div class="testimonials__content-box">
+                <p class="testimonials__content-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra mus lobortis
+                  fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus ornare turpis quis non.
+                  Congue tortor in euismod vulputate etiam eros. Pulvinar neque pharetra arcu diam maecenas diam integer
+                  in.
+                </p>
+                <img class="testimonials__content-decor" src="images/braces.png" alt="decor">
+                <div class="testimonials__author-box">
+                  <img class="testimonials__author-image" src="images/content/author-test-img.png" alt="auhtor image"
+                    style="width: 72px; height: 72px;">
+                  <div class="testimonials__author-name">Eleanor Pena</div>
+                  <div class="testimonials__author-position">Position, Course</div>
+                </div>
+              </div>
+
+              <div class="testimonials__content-box">
+                <p class="testimonials__content-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra mus lobortis
+                  fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus ornare turpis quis non.
+                  Congue tortor in euismod vulputate etiam eros. Pulvinar neque pharetra arcu diam maecenas diam integer
+                  in.
+                </p>
+                <img class="testimonials__content-decor" src="images/braces.png" alt="decor">
+                <div class="testimonials__author-box">
+                  <img class="testimonials__author-image" src="images/content/author-test-img.png" alt="auhtor image"
+                    style="width: 72px; height: 72px;">
+                  <div class="testimonials__author-name">Eleanor Pena</div>
+                  <div class="testimonials__author-position">Position, Course</div>
+                </div>
+              </div>
+
+              <div class="testimonials__content-box">
+                <p class="testimonials__content-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra mus lobortis
+                  fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus ornare turpis quis non.
+                  Congue tortor in euismod vulputate etiam eros. Pulvinar neque pharetra arcu diam maecenas diam integer
+                  in.
+                </p>
+                <img class="testimonials__content-decor" src="images/braces.png" alt="decor">
+                <div class="testimonials__author-box">
+                  <img class="testimonials__author-image" src="images/content/author-test-img.png" alt="auhtor image"
+                    style="width: 72px; height: 72px;">
+                  <div class="testimonials__author-name">Eleanor Pena</div>
+                  <div class="testimonials__author-position">Position, Course</div>
+                </div>
+              </div>
+
+              <div class="testimonials__content-box">
+                <p class="testimonials__content-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus quam viverra mus lobortis
+                  fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis tempus ornare turpis quis non.
+                  Congue tortor in euismod vulputate etiam eros. Pulvinar neque pharetra arcu diam maecenas diam integer
+                  in.
+                </p>
+                <img class="testimonials__content-decor" src="images/braces.png" alt="decor">
+                <div class="testimonials__author-box">
+                  <img class="testimonials__author-image" src="images/content/author-test-img.png" alt="auhtor image"
+                    style="width: 72px; height: 72px;">
+                  <div class="testimonials__author-name">Eleanor Pena</div>
+                  <div class="testimonials__author-position">Position, Course</div>
+                </div>
+              </div>
+
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="expertise">
+      <div class="container">
+        <div class="expertise__inner expertise__courses-page">
+          <div class="expertise__info-box">
+            <h6 class="expertise__suptitle">
+              Createx Certificate
+            </h6>
+            <h2 class="expertise__title">
+              Your expertise will be confirmed
+            </h2>
+            <p class="expertise__text">
+              We are accredited by international professional organizations and institutes:
+            </p>
+            <div class="expertise__partners-box">
+              <img class="expertise__partners-img" src="images/content/expertise-part1.png" alt="partners"
+                style="width: 105px; height: 50px;">
+              <img class="expertise__partners-img" src="images/content/expertise-part2.png" alt="partners"
+                style="width: 105px; height: 50px;">
+              <img class="expertise__partners-img" src="images/content/expertise-part3.png" alt="partners"
+                style="width: 105px; height: 50px;">
+            </div>
+          </div>
+          <div class="expertise__image-box">
+            <img class="expertise__certificate-image" src="images/content/expertise-certeficate.png" alt="certificate"
+              style="width: 705px; height: 500px;">
+          </div>
+
+        </div>
+      </div>
+    </section>
+
 
   </main>
 
