--- a/app/index.html
+++ b/app/index.html
@@ -1021,7 +1021,7 @@
             <a class="blog-page__btn btn " href="#">Go to blog</a>
           </div>
           <div class="blog__posts">
-            <div class="blog__post">
+            <article class="blog__post">
               <div class="blog-post__image-box">
                 <img class="blog-post__image" src="images/content/post-1.png" alt="post one"
                   style="width: 390px; height: 300px;">
@@ -1063,8 +1063,8 @@
                 <line x1="15" y1="8" x2="19" y2="12" />
               </svg>
               </a>
-            </div>
-            <div class="blog__post">
+            </article>
+            <article class="blog__post">
               <div class="blog-post__image-box">
                 <img class="blog-post__image" src="images/content/post-2.png" alt="post one"
                   style="width: 390px; height: 300px;">
@@ -1101,8 +1101,8 @@
                 <line x1="15" y1="8" x2="19" y2="12" />
               </svg>
               </a>
-            </div>
-            <div class="blog__post">
+            </article>
+            <article class="blog__post">
               <div class="blog-post__image-box">
                 <img class="blog-post__image" src="images/content/post-3.png" alt="post one"
                   style="width: 390px; height: 300px;">
@@ -1140,7 +1140,7 @@
                   <line x1="15" y1="8" x2="19" y2="12" />
                 </svg>
               </a>
-            </div>
+            </article>
           </div>
         </div>
       </div>
