--- a/app/course-single.html
+++ b/app/course-single.html
@@ -96,44 +96,44 @@
               sit cras at malesuada diam. Consequat senectus dictumst non hac dignissim montes, pretium, egestas
               molestie. Sed magna aliquet ornare nibh vel lectus diam eget pretium. Lorem risus nunc tincidunt tortor,
               mi nulla pellentesque
-            </p>   
+            </p>
             <ul class="join-course__list">
-            <h4 class="join-course__list-title">
-              You will learn:
-            </h4>
-            <li>
-              <p>
-                A fermentum in morbi pretium aliquam adipiscing donec tempus.
-              </p>
-            </li>
-            <li>
-              <p>
-                Vulputate placerat amet pulvinar lorem nisl.
-              </p>
-            </li>
-            <li>
-              <p>
-                Consequat feugiat habitant gravida quisque elit bibendum id adipiscing sed.
-              </p>
-            </li>
-            <li>
-              <p>
-                Etiam duis lobortis in fames ultrices commodo nibh.
-              </p>
-            </li>
-            <li>
-              <p>
-                Fringilla in nec risus congue venenatis pretium posuere nec.
-              </p>
-            </li>
-            <li>
-              <p>
-                Cursus eu pretium, vulputate tempus quam massa sed at.
-              </p>
-            </li>
-          </ul>
+              <h4 class="join-course__list-title">
+                You will learn:
+              </h4>
+              <li>
+                <p>
+                  A fermentum in morbi pretium aliquam adipiscing donec tempus.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Vulputate placerat amet pulvinar lorem nisl.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Consequat feugiat habitant gravida quisque elit bibendum id adipiscing sed.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Etiam duis lobortis in fames ultrices commodo nibh.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Fringilla in nec risus congue venenatis pretium posuere nec.
+                </p>
+              </li>
+              <li>
+                <p>
+                  Cursus eu pretium, vulputate tempus quam massa sed at.
+                </p>
+              </li>
+            </ul>
           </div>
-       
+
           <div class="join-course__description-box">
             <ul class="join-course__description-list">
               <li class="join-course__description-item">
@@ -172,8 +172,91 @@
             </ul>
             <a class="join-course__description-btn btn" href="#">Join the course</a>
           </div>
-       
+
         </div>
+      </div>
+    </section>
+
+    <section class="curator">
+      <div class="container">
+        <div class="curator__inner">
+          <img class="curator__image" src="images/content/curator-image.png" alt="curator iamge"
+            style="width: 495px; height: 600px;">
+          <div class="curator__info-box">
+            <h6 class="curator__suptitle">
+              Course curator
+            </h6>
+            <h2 class="curator__author-name">
+              Cody Fisher
+            </h2>
+            <p class="curator__author-position">
+              Senior UX designer in IT Product Company
+            </p>
+            <ul class="curator__list-info">
+              <li class="curator__list-item curator__rate">
+                4.9 rate
+                <img class="curator__courses-icon" src="images/star.png" alt="icon" style="width:15px; height: 15px;">
+              </li>
+              <li class="curator__list-item">
+                4 courses
+                <img class="curator__courses-icon" src="images/play.png" alt="icon" style="width:15px; height: 15px;">
+              </li>
+              <li class="curator__list-item curator__students">
+                350 students
+                <img class="curator__courses-icon" src="images/user-ac.png" alt="icon" style="width: 15px; height: 15px;">
+              </li>
+            </ul>
+            <p class="curator__text">
+              Mattis adipiscing aliquam eu proin metus a iaculis faucibus. Tempus curabitur venenatis, vulputate
+              venenatis
+              fermentum ante. Nisl, amet id semper semper quis commodo, consequat. Massa rhoncus sit morbi odio. Sit
+              maecenas nibh consectetur vel diam. Sem vulputate molestie laoreet at massa sed pharetra. Ac commodo
+              platea
+              id habitasse proin. Nullam sit nec ipsum posuere non. Nam vel aliquam tristique sollicitudin interdum
+              quam.
+            </p>
+            <ul class="curator__social-list">
+              <li>
+                <a href="#">
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 16 28">
+                    <path
+                      d="M14.984 0.187v4.125h-2.453c-1.922 0-2.281 0.922-2.281 2.25v2.953h4.578l-0.609 4.625h-3.969v11.859h-4.781v-11.859h-3.984v-4.625h3.984v-3.406c0-3.953 2.422-6.109 5.953-6.109 1.687 0 3.141 0.125 3.563 0.187z">
+                    </path>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="28" viewBox="0 0 32 28">
+                    <title>behance</title>
+                    <path d="M28.875 5.297h-7.984v1.937h7.984v-1.937zM24.938 11.953c-1.875 0-3.125 1.172-3.25 3.047h6.375c-0.172-1.891-1.156-3.047-3.125-3.047zM25.188 21.094c1.188 0 2.719-0.641 3.094-1.859h3.453c-1.062 3.266-3.266 4.797-6.672 4.797-4.5 0-7.297-3.047-7.297-7.484 0-4.281 2.953-7.547 7.297-7.547 4.469 0 6.937 3.516 6.937 7.734 0 0.25-0.016 0.5-0.031 0.734h-10.281c0 2.281 1.203 3.625 3.5 3.625zM4.328 20.312h4.625c1.766 0 3.203-0.625 3.203-2.609 0-2.016-1.203-2.812-3.109-2.812h-4.719v5.422zM4.328 11.922h4.391c1.547 0 2.641-0.672 2.641-2.344 0-1.813-1.406-2.25-2.969-2.25h-4.062v4.594zM0 3.969h9.281c3.375 0 6.297 0.953 6.297 4.875 0 1.984-0.922 3.266-2.688 4.109 2.422 0.688 3.594 2.516 3.594 4.984 0 4-3.359 5.719-6.937 5.719h-9.547v-19.688z"></path>
+                    </svg>                    
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="26" height="28" viewBox="0 0 26 28">
+                    <title>twitter</title>
+                    <path
+                      d="M25.312 6.375c-0.688 1-1.547 1.891-2.531 2.609 0.016 0.219 0.016 0.438 0.016 0.656 0 6.672-5.078 14.359-14.359 14.359-2.859 0-5.516-0.828-7.75-2.266 0.406 0.047 0.797 0.063 1.219 0.063 2.359 0 4.531-0.797 6.266-2.156-2.219-0.047-4.078-1.5-4.719-3.5 0.313 0.047 0.625 0.078 0.953 0.078 0.453 0 0.906-0.063 1.328-0.172-2.312-0.469-4.047-2.5-4.047-4.953v-0.063c0.672 0.375 1.453 0.609 2.281 0.641-1.359-0.906-2.25-2.453-2.25-4.203 0-0.938 0.25-1.797 0.688-2.547 2.484 3.062 6.219 5.063 10.406 5.281-0.078-0.375-0.125-0.766-0.125-1.156 0-2.781 2.25-5.047 5.047-5.047 1.453 0 2.766 0.609 3.687 1.594 1.141-0.219 2.234-0.641 3.203-1.219-0.375 1.172-1.172 2.156-2.219 2.781 1.016-0.109 2-0.391 2.906-0.781z">
+                    </path>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="28" viewBox="0 0 24 28">
+                    <title>linkedin</title>
+                    <path
+                      d="M5.453 9.766v15.484h-5.156v-15.484h5.156zM5.781 4.984c0.016 1.484-1.109 2.672-2.906 2.672v0h-0.031c-1.734 0-2.844-1.188-2.844-2.672 0-1.516 1.156-2.672 2.906-2.672 1.766 0 2.859 1.156 2.875 2.672zM24 16.375v8.875h-5.141v-8.281c0-2.078-0.75-3.5-2.609-3.5-1.422 0-2.266 0.953-2.641 1.875-0.125 0.344-0.172 0.797-0.172 1.266v8.641h-5.141c0.063-14.031 0-15.484 0-15.484h5.141v2.25h-0.031c0.672-1.062 1.891-2.609 4.672-2.609 3.391 0 5.922 2.219 5.922 6.969z">
+                    </path>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
       </div>
     </section>
 
