added section steps

--- a/app/course-single.html
+++ b/app/course-single.html
@@ -260,6 +260,70 @@
       </div>
     </section>
 
+    <section class="steps">
+      <div class="container">
+        <div class="steps__inner">
+          <div class="steps__title-box">            
+            <h6 class="steps__suptitle">
+              Main steps
+            </h6>
+            <h2 class="steps__title">
+              Online learning process
+            </h2>
+          </div>
+          <ul class="steps__list">
+            <li class="steps__list-item">
+              <div class="steps__list-num">
+                <span></span>
+                01
+              </div>
+              <h6 class="steps__list-title">
+                Watching online video lectures
+              </h6>
+              <p class="steps__list-text">
+                Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam velit nostrud aliquip sunt.
+              </p>
+            </li>
+            <li class="steps__list-item">
+              <div class="steps__list-num">
+                <span></span>
+                02
+              </div>
+              <h6 class="steps__list-title">
+                Passing test
+              </h6>
+              <p class="steps__list-text">
+                Anim reprehenderit sint voluptate exercitation adipisicing laborum adipisicing. Minim ad tempor est ea.
+              </p>
+            </li>
+            <li class="steps__list-item">
+              <div class="steps__list-num">
+                <span></span>
+                03
+              </div>
+              <h6 class="steps__list-title">
+                Curator’s feedback
+              </h6>
+              <p class="steps__list-text">
+                Adipisicing esse aliqua aliquip qui amet. Aute eiusmod dolore dolore et ad et veniam ad deserunt.
+              </p>
+            </li>
+            <li class="steps__list-item">
+              <div class="steps__list-num">
+                <span></span>
+                04
+              </div>
+              <h6 class="steps__list-title">
+                Corrections if needed
+              </h6>
+              <p class="steps__list-text">
+                Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit voluptate ullamco proident ea ad.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
   </main>
 
