added section course-benefits

--- a/app/course-single.html
+++ b/app/course-single.html
@@ -389,6 +389,43 @@
       </div>
     </section>
 
+    <section class="course-benefits">
+      <div class="container">
+        <div class="course-benefits__inner">
+          <div class="course-benefits__title-box">
+            <div class="course-benefits__suptitle">
+              For whom?
+            </div>
+            <div class="course-benefits__title">
+              Who will benefit from the course:
+            </div>
+          </div>
+          <ul class="course-benefits__list">
+            <li class="course-benefits__list-item">
+              <p>
+                Specialists with more than 1 year of active work experience
+              </p>             
+            </li>
+            <li class="course-benefits__list-item">
+              <p>
+                Mobile app designers who want to improve their skills in solving business problems, creating and testing human-centered interfaces
+              </p>
+            </li>
+            <li class="course-benefits__list-item">
+              <p>
+                Professional designers who want to feel more confident in UX
+              </p>
+            </li>
+            <li class="course-benefits__list-item">
+              <p>
+                Specialists who would like to structure their knowledge, fill in the gaps
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <section class="subscribe">
