added  grid-list filtration events-page finish

--- a/app/events-page.html
+++ b/app/events-page.html
@@ -120,7 +120,7 @@
 
             </form>
             <div class="events-page__filter-box">
-              <button class="events-page__filter-btn events-page__filter-btn--active">
+              <button class="events-page__filter-btn events-page__filter-list events-page__filter-btn--active">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-layout-list" width="20"
                   height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#787A80" fill="none" stroke-linecap="round"
                   stroke-linejoin="round">
@@ -129,7 +129,7 @@
                   <rect x="4" y="14" width="16" height="6" rx="2" />
                 </svg>
               </button>
-              <button class="events-page__filter-btn">
+              <button class="events-page__filter-btn events-page__filter-grid">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-layout-grid" width="20"
                   height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#787A80" fill="none" stroke-linecap="round"
                   stroke-linejoin="round">
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="events-page__content">
-            <div class="events__content-item">
+            <div class=" events-page__content-item ">
               <div class="events-item__day">05</div>
               <div class="events-item__date">
                 <p class="events-item__month">August</p>
@@ -161,7 +161,7 @@
                 <a class="events__btn btn btn-white" href="#">View more</a>
               </div>
             </div>
-            <div class="events__content-item">
+            <div class=" events-page__content-item ">
               <div class="events-item__day">05</div>
               <div class="events-item__date">
                 <p class="events-item__month">August</p>
@@ -179,7 +179,7 @@
                 <a class="events__btn btn btn-white" href="#">View more</a>
               </div>
             </div>
-            <div class="events__content-item">
+            <div class=" events-page__content-item ">
               <div class="events-item__day">05</div>
               <div class="events-item__date">
                 <p class="events-item__month">August</p>
@@ -197,7 +197,7 @@
                 <a class="events__btn btn btn-white" href="#">View more</a>
               </div>
             </div>
-            <div class="events__content-item">
+            <div class=" events-page__content-item ">
               <div class="events-item__day">05</div>
               <div class="events-item__date">
                 <p class="events-item__month">August</p>
@@ -215,7 +215,7 @@
                 <a class="events__btn btn btn-white" href="#">View more</a>
               </div>
             </div>
-            <div class="events__content-item">
+            <div class=" events-page__content-item ">
               <div class="events-item__day">05</div>
               <div class="events-item__date">
                 <p class="events-item__month">August</p>
@@ -233,7 +233,7 @@
                 <a class="events__btn btn btn-white" href="#">View more</a>
               </div>
             </div>
-            <div class="events__content-item">
+            <div class=" events-page__content-item ">
               <div class="events-item__day">05</div>
               <div class="events-item__date">
                 <p class="events-item__month">August</p>
@@ -251,7 +251,7 @@
                 <a class="events__btn btn btn-white" href="#">View more</a>
               </div>
             </div>
-            <div class="events__content-item">
+            <div class=" events-page__content-item ">
               <div class="events-item__day">05</div>
               <div class="events-item__date">
                 <p class="events-item__month">August</p>
@@ -269,7 +269,7 @@
                 <a class="events__btn btn btn-white" href="#">View more</a>
               </div>
             </div>
-            <div class="events__content-item">
+            <div class=" events-page__content-item ">
               <div class="events-item__day">05</div>
               <div class="events-item__date">
                 <p class="events-item__month">August</p>
@@ -287,7 +287,7 @@
                 <a class="events__btn btn btn-white" href="#">View more</a>
               </div>
             </div>
-            <div class="events__content-item">
+            <div class="events-page__content-item ">
               <div class="events-item__day">24</div>
               <div class="events-item__date">
                 <p class="events-item__month">July</p>
