added lecture-benefits + subscribe-box

--- a/app/lecture-page.html
+++ b/app/lecture-page.html
@@ -196,13 +196,16 @@
             </p>
             <ul class="sponsor__list">
               <li class="sponsor__list-item">
-                <img class="sponsor__image" src="images/sponsor-1.png" alt="sponsor one" style="width: 105px; height: 50px;">
+                <img class="sponsor__image" src="images/sponsor-1.png" alt="sponsor one"
+                  style="width: 105px; height: 50px;">
               </li>
               <li class="sponsor__list-item">
-                <img class="sponsor__image" src="images/sponsor-2.png" alt="sponsor one" style="width: 105px; height: 50px;">
+                <img class="sponsor__image" src="images/sponsor-2.png" alt="sponsor one"
+                  style="width: 105px; height: 50px;">
               </li>
               <li class="sponsor__list-item">
-                <img class="sponsor__image" src="images/sponsor-3.png" alt="sponsor one" style="width: 105px; height: 50px;">
+                <img class="sponsor__image" src="images/sponsor-3.png" alt="sponsor one"
+                  style="width: 105px; height: 50px;">
               </li>
             </ul>
             <ul class="curator__social-list">
@@ -250,6 +253,64 @@
           </div>
         </div>
     </section>
+
+    <section class="lecture-speaker course-benefits">
+      <div class="container">
+        <div class="course-benefits__inner">
+          <div class="course-benefits__title-box">
+            <div class="course-benefits__suptitle">
+              For whom?
+            </div>
+            <div class="course-benefits__title">
+              Who will benefit from the event:
+            </div>
+          </div>
+          <ul class="course-benefits__list">
+            <li class="course-benefits__list-item">
+              <p>
+                Specialists with more than 1 year of active work experience
+              </p>
+            </li>
+            <li class="course-benefits__list-item">
+              <p>
+                Mobile app designers who want to improve their skills in solving business problems, creating and testing
+                human-centered interfaces
+              </p>
+            </li>
+            <li class="course-benefits__list-item">
+              <p>
+                Professional designers who want to feel more confident in UX
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <div class="subscribe-box">
+      <div class="container container-pink">
+        <div class="subscribe-box__inner">
+          <img class="subscribe-box__image" src="images/subscribebox-1.png" alt="sub image">
+          <div class="subscribe-box__content">
+            <h3 class="subscribe-box__title">
+              Don’t want to miss the best events?
+              Subscribe to our newsletter!
+            </h3>
+            <form class="subscribe-box__form">
+              <label class="subscribe-box__line">
+                <input type="text" placeholder="Your working email">
+                <button class="btn">Subscribe</button>
+              </label>
+              <label>
+                <input class="subscribe-box__checkbox" type="checkbox">
+                I agree to receive communications from Createx Online School
+              </label>
+            </form>
+          </div>
+
+        </div>
+      </div>
+    </div>
 
 
   </main>
